# ClusterChatServer

./: CMakeLists.txt  README.md
include/server/: chatserver.hpp  chatservice.hpp  public.hpp
include/server/db/: db.h
include/server/model/: UserModel.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemsgmodel.hpp  user.hpp
include/server/redis/: redis.hpp
src/: Makefile  cmake_install.cmake
src/client/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  Makefile  cmake_install.cmake  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
